Started on the projekt

--- a/projektopgave/O-run_analysis.ipynb
+++ b/projektopgave/O-run_analysis.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,24 +256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(datetime.datetime(2022, 10, 8, 13, 16, 48, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),\n",
-       " {'latitude': 55.921604661270976,\n",
-       "  'longitude': 11.666395431384444,\n",
-       "  'altitude': 4.800000000000011,\n",
-       "  'timestamp': datetime.datetime(2022, 10, 8, 13, 16, 40, tzinfo=<DstTzInfo 'Europe/Copenhagen' CEST+2:00:00 DST>),\n",
-       "  'heart_rate': 155,\n",
-       "  'cadence': 56})"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'points' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m st_1 \u001b[39m=\u001b[39m [p \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m points \u001b[39mif\u001b[39;00m p[\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mastimezone() \u001b[39m<\u001b[39m postkontroller[\u001b[39m1\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m] ]\n\u001b[0;32m      2\u001b[0m \u001b[39m# her ses postkontrollens timestamp, og det sidste punkt fra fit filen der er før posten\u001b[39;00m\n\u001b[0;32m      3\u001b[0m postkontroller[\u001b[39m1\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m], st_1[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'points' is not defined"
+     ]
     }
    ],
    "source": [
@@ -436,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
