--- a/projektopgave/O-run_analysis.ipynb
+++ b/projektopgave/O-run_analysis.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,10 +25,8 @@
     "Noget af svaret har således et helt bestemt output, andre måske et lidt mere valgfrit udseende.\n",
     "\n",
     "Du skal altså arbejde med at\n",
-    "* analysere problemfeltets usecases, \n",
     "* datastrukturer der benyttes,\n",
-    "* forstå brugerens domæne (godt nok til at løse opgaven),\n",
-    "* søge viden om problemfelt, brugerens domæne og relevante datastrukturer og brugbare komponenter,\n",
+    "* søge viden om problemfelt, brugerens domæne, use cases og relevante datastrukturer og brugbare komponenter,\n",
     "* vælge komponenter (aka libraries),\n",
     "* integrere komponenter i programmet,\n",
     "* programmere,\n",
@@ -83,8 +82,8 @@
    "metadata": {},
    "source": [
     "## Delmål\n",
-    "1. Skriv en funktion som omregner fra tempo (min/km) til hastighed (m/s)\n",
-    "2. indlæs løbsfilen xxx.fit\n",
+    "1. ~~Skriv en funktion som omregner fra tempo (min/km) til hastighed (m/s)~~ se `handout.py`\n",
+    "2. ~~indlæs løbsfilen xxx.fit~~ se `handout.py`\n",
     "3. Skriv en funktion som beregner distance og tid mellem hvert målepunkt, og returnerer dette i en ny liste af linjestykker.\n",
     "4. Beregn den samlede fordeling mellem tempo-zoner \n",
     "   1. I en funktion som \n",
@@ -94,11 +93,11 @@
     "\n",
     "Flere opgaver for de hurtige:\n",
     "\n",
-    "6. Lav en ny funktion som, ud fra tidspunktet for post-kontrollerne i tabel x, \n",
-    "   1. beregn afstanden i fugleflugt, mellem posterne\n",
-    "   2. opdel listen af målepunkter i lister med punkter for stræk mellem hver post\n",
+    "6. I en ny funktion som, ud fra tidspunktet for post-kontrollerne i tabel x, \n",
+    "   1. opdeler listen af målepunkter i nye lister med punkter for stræk mellem hver post (Da vi ikke har geopunkter for posternes placeringer, kan dette kan kun ske ved at sammenligne timestamps)\n",
+    "   2. beregner afstanden i fugleflugt, mellem posterne\n",
     "   3. beregner afstanden som faktisk er tilbagelagt på hvert stræk mellem posterne\n",
-    "7. Ligesom i punkt 4, lav en ny funktion som beregner fordelingen mellem tempo-zoner, i hvert stræk\n",
+    "7. Ligesom i punkt 4, lav en ny funktion som beregner fordelingen mellem tempo-zoner, i hvert stræk (egentlig det samme som punkt 2-4, men for hvert \"ben\" ml posterne)\n",
     "   1. beregn hastighed mellem hvert målepunkt\n",
     "   2. beregn sum af afstand og sum af tid i hver af de tre tempo-zoner; løb, gang og stå\n",
     "   3. beregn hvor mange procent af tiden, der samlet foregår hver tempo-zone\n",
